# ServiceX_DID

./: .flake8  .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  user_story.md
.github/workflows/: ci.yaml  pypi.yaml
src/servicex_did/: __init__.py  communication.py
src/servicex_did_finder_lib/: __init__.py  accumulator.py  communication.py  did_finder_app.py  did_logging.py  did_summary.py  logging.py  replica_distance_service.py  servicex_adaptor.py  util_uri.py
tests/: test_communication.py  test_servicex_did.py
tests/servicex_did_finder_lib/: test_communication.py  test_servicex_did.py  test_util_uri.py
tests/servicex_did_finder_lib_tests/: conftest.py  test_accumulator.py  test_did_finder_app.py  test_did_summary.py  test_replica_sorter.py  test_servicex_adaptor.py
tests/stresstest/: stressful_did_finder.py
