[tool.poetry]
name = "ServiceX_DID_Finder_lib"
version = "1.0.0a1"
description = "ServiceX DID Library Routines"
authors = ["Gordon Watts <gwatts@uw.edu>"]

[tool.poetry.dependencies]
python = "^3.8.1"
make-it-sync = "^1.0.0"
requests = "^2.25.0"
Celery= "^5.4"
geoip2 = "^4.7.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
flake8 = "^7.1"
pytest-mock = "^3.12.0"
coverage = "^7.4.0"
responses = "^0.14.0"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
